# alibi_cpp

./: .gitignore  Block.cpp  Block.h  CMakeLists.txt  Graph.cpp  Graph.h  README.md  main.cpp  sort.h
src/: Block.cpp  Block.h  Graph.cpp  Graph.h  linsort.cpp  linsort.h  read.cpp  read.h
tests/: CMakeLists.txt  main.cpp  test_block.cpp  test_graph.cpp  test_read.cpp  test_sort.cpp
tests/data/: 1y3b.contigs.gfa  1y3b.contigs_sorted.gfa  simData_10_10_1.gfa  simData_10_10_1_a.gfa  test.gfa  test_article.gfa  test_fa.gfa  test_rj.gfa
